--- a/weather_app/templates/index.html
+++ b/weather_app/templates/index.html
@@ -11,7 +11,7 @@
 </head>
 
 <body>
-    <nav class="row" style="background: #c61a1a; color: white;">
+    <nav class="row" style="background: #5e5d5d; color: white;">
         <h1 class="col-md-3 text-center">Weather App</h1>
     </nav>
     <br />
@@ -21,8 +21,8 @@
             <div class="input-group">
                 <input type="text" class="form-control" name="city" placeholder="Search">
                 <div class="input-group-btn">
-                    <button class="btn btn-primary" style="background: #c61a1a" type="submit">
-                        <i class="glyphicon glyphicon-search" style="background: #c61a1a"></i>
+                    <button class="btn btn-primary" style="background: #5e5d5d" type="submit">
+                        <i class="glyphicon glyphicon-search" style="background: #5e5d5d "></i>
                     </button>
                 </div>
             </div>
